--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
       <plugin>
@@ -74,6 +74,11 @@
           <groupId>com.moandjiezana.toml</groupId>
           <artifactId>toml4j</artifactId>
           <version>0.7.2</version>
+      </dependency>
+      <dependency>
+          <groupId>net.kyori</groupId>
+          <artifactId>adventure-text-minimessage</artifactId>
+          <version>4.14.0</version>
       </dependency>
   </dependencies>
 </project>
